[tool.poetry]
name = "test-git"
version = "0.1.0"
description = ""
authors = ["William <william.botero@uao.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
